# async-arango

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: build.yaml
aioarango/: aql.py  client.py  collection.py  connection.py  cursor.py  database.py  exceptions.py  executor.py  formatter.py  http.py  pregel.py  request.py  resolver.py  typings.py  utils.py
docs/: conf.py  http.rst  index.rst  transaction.rst
tests/: test_client.py  test_document.py  test_request.py  test_resolver.py
