[tool.poetry]
name = "aioarango"
version = "1.0.0"
description = "Asynchronous driver for ArangoDB"
authors = ["Alexey Tylindus <a.tylindus@gmail.com>"]
license = "MIT"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation :: Sphinx",
]
homepage = "https://github.com/mirrorrim/aioarango"
repository = "https://github.com/mirrorrim/aioarango"
packages = [{ include = "aioarango" }]

[tool.poetry.dependencies]
python = "^3.11.0"
httpx = "^0.23.0"
PyJWT = "^2.6.0"
requests-toolbelt = "^0.10.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^5.0.4"
ipython = "^8.7.0"
isort = "^5.11.3"
mock = "^4.0.3"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["arango/version.py", "arango/formatter.py", "setup.py"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-s -vv -p no:warnings"
minversion = "6.0"
testpaths = ["tests"]
